# dynamic

robot_dynamics/: CMakeLists.txt  README.md  Yr.txt  robot_dynamics.cpp  robot_dynamics.h  robot_wrapper.cpp
robot_dynamics/robot_dynamics_example/: CMakeLists.txt  main.cpp
robot_dynamics/robot_dynamics_test/: robot_dynamics_test.py
激励轨迹计算和动力学参数辨识/: MYCOND_6dof.m  MYCOND_8dof.m  P_min_dh.mat  P_min_mdh.txt  Pmin_calc_func.m  Pr_iden_arm.m  Pr_iden_arm_real.asv  Pr_iden_arm_real.m  Pr_iden_arm_real_6dof.m  README.md  TrajPSOID_6dof.m  TrajPSOID_8dof.m  arm_dyn_iden.m  arm_rtb.m  arm_visual.m  pot_final_trajectory_script.m  pot_final_trajectory_script_6dof.m  uts_traj_left.txt  x_opt_1.mat  x_opt_2.mat
激励轨迹计算和动力学参数辨识/dyn_iden_fun/: MDHTrans.m  Pmin_calc.m  Pmin_calc_6dof.m  RotX.m  RotY.m  RotZ.m  Yc_calc.m  Yc_calc_6dof.m  getAi.m  getHi.m  getInertiaMatrix.m  getK.m  getS.m  get_Yf_Yn.m  motion_para_clc.m
